# chlaty-core

./: .env  .env.template  .gitignore  Cargo.toml  README.md  manifest.json
src/: download_plugin.rs  lib.rs  test.rs
src/manage_plugin/: download_plugin.rs  get_installed_plugin_list.rs  get_plugin.rs  get_plugin_list.rs  get_plugin_release.rs  install_plugin.rs  mod.rs  remove_plugin.rs
src/request_plugin/: get_episode_list.rs  get_episode_server.rs  get_server.rs  mod.rs  search.rs
src/utils/: download.rs  get_lib_extension.rs  manifest.rs  mod.rs  plugin_loader.rs
