[package]
name = "chlaty-core"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3 
lto = true 
strip = true
codegen-units = 1

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }


serde_json = "1.0.143"
reqwest = {version = "0.12.23", default-features = false, features = ["rustls-tls", "blocking", "json"]}
serde = "1.0.226"
indicatif = "0.18.0"
dotenv = "0.15.0"
libloading = "0.8.9"

