[package]
name = "chlaty-core"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3 
lto = true 
strip = false # Dynamic libloading will be bugged if set strip to `true`
codegen-units = 1

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde_json = "1.0.143"
reqwest = {version = "0.12.23", default-features = false, features = ["rustls-tls", "blocking", "json"]}
serde = "1.0.226"
indicatif = "0.18.0"
dotenv = "0.15.0"
libloading = "0.8.9"
dashmap = "6.1.0"
lazy_static = "1.5.0"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt"] }

